--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rapunzel</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Link para a fonte Areia Movediça -->
+  <link href="https://fonts.googleapis.com/css2?family=Areia+Movediça&display=swap" rel="stylesheet">
 </head>
 <body>
-
   <header>
     <div class="header-top">
       <h1>Rapunzel</h1>
       <div class="avatar-container">
         <img src="img/projeto-avatar.png" alt="Avatar da Rapunzel" class="avatar">
       </div>
-   
     </div>
     <p class="intro">
       Olá! 
@@ -29,7 +29,6 @@
         Pintura, canto, poderes mágicos de cura com o cabelo, ótimo trato com animais, costura e muitas outras atividades!
       </p>
     </section>
-
     <section class="projetos">
       <h2>Projetos</h2>
       <div class="cards">
@@ -43,7 +42,7 @@
         <!-- Card 2 -->
         <div class="card" onclick="openModal('modal2')">
           <h3>Livros Infantis Ilustrados</h3>
-          <img src="img/projeto-criancas1.png" alt="Livros Infantis">
+          <img src="img/projeto-criancas2.png" alt="Livros Infantis">
         </div>
 
         <!-- Card 3 -->
@@ -69,49 +68,48 @@
   </main>
 
   <footer>
-    <p>Contato: rapunzel.luzeterna@reinoencantado.com</p>
-    <p>Instagram: <a href="#">@RapunzelOficial</a></p>
+    <p>Contato: <a href="https://github.com/raimundosarah/rapunzel.git" target="_blank">GitHub: raimundosarah</a></p>
     <p>© 2025 - Criado com criatividade e magia.</p>
   </footer>
-
+  
   <!-- Modais -->
   <div id="modal1" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal1')">&times;</span>
       <h2>Pintura das Lâmpadas</h2>
-      <p>Um mural encantador que pintei para celebrar a tradição das lanternas...</p>
+      <p>A Pintura das Lâmpadas é um mural encantado que transformei lanternas em obras de arte, trazendo luz e esperança ao ambiente. Cada lâmpada foi pintada para refletir sentimentos e sonhos, criando uma atmosfera mágica e iluminada que simboliza como a luz sempre pode nos guiar.
+      </p>
     </div>
   </div>
-
   <div id="modal2" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal2')">&times;</span>
       <h2>Livros Infantis Ilustrados</h2>
-      <p>Criei histórias ilustradas com mensagens de coragem, empatia e esperança...</p>
+      <p>Nos Livros Infantis Ilustrados, criei histórias mágicas com lições sobre amizade, coragem e superação. As ilustrações vibrantes acompanham cada narrativa, levando as crianças a explorar o poder da imaginação e a entender que todos têm um papel especial no mundo.
+      </p>
     </div>
   </div>
-
   <div id="modal3" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal3')">&times;</span>
       <h2>Jardim dos Sonhos</h2>
-      <p>Um espaço florido e mágico que projetei para relaxar e meditar...</p>
+      <p>O Jardim dos Sonhos foi inspirado pela flor mágica que concedeu os poderes de cura a Rapunzel. Com suas flores vibrantes e ambiente tranquilo, é um refúgio perfeito para relaxar e se conectar com a natureza.</p>
     </div>
   </div>
-
   <div id="modal4" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal4')">&times;</span>
       <h2>Festival da Canção</h2>
-      <p>Organizei um festival no castelo para reunir artistas do reino...</p>
+      <p>O Festival da Canção foi criado para reunir artistas e músicos do reino para celebrar a música como uma forma de união. Cada performance foi uma oportunidade de expressar emoções, contar histórias e viver momentos de pura magia e alegria.
+      </p>
     </div>
   </div>
-
   <div id="modal5" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal5')">&times;</span>
       <h2>Ateliê de Costura Criativa</h2>
-      <p>Criei um espaço para fazer roupas encantadas com tecidos naturais...</p>
+      <p>No Ateliê de Costura Criativa, criei um espaço para confeccionar roupas encantadas com tecidos naturais. Este projeto é uma mistura de arte e funcionalidade, onde a criatividade ganha vida através de peças únicas que refletem a beleza da costura e o poder de transformar o comum em mágico.
+</p>
     </div>
   </div>
 
@@ -130,6 +128,5 @@
       }
     }
   </script>
-
 </body>
 </html>
