--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rapunzel</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Link para a fonte Areia Movediça -->
-  <link href="https://fonts.googleapis.com/css2?family=Areia+Movediça&display=swap" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <header>
@@ -26,7 +27,7 @@
     <section class="habilidades">
       <h2>Habilidades</h2>
       <p>
-        Pintura, canto, poderes mágicos de cura com o cabelo, ótimo trato com animais, costura e muitas outras atividades!
+        Pintura, canto, leitura, dança, poderes mágicos de cura e rejuvenescimento com o cabelo, ótimo trato com animais, costura e muitas outras atividades!
       </p>
     </section>
     <section class="projetos">
@@ -47,8 +48,8 @@
 
         <!-- Card 3 -->
         <div class="card" onclick="openModal('modal3')">
-          <h3>Jardim dos Sonhos</h3>
-          <img src="img/projeto-flor.png" alt="Jardim dos Sonhos">
+          <h3>Jardim Encantado</h3>
+          <img src="img/projeto-flor.png" alt="Jardim Encantado">
         </div>
 
         <!-- Card 4 -->
@@ -92,8 +93,8 @@
   <div id="modal3" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal('modal3')">&times;</span>
-      <h2>Jardim dos Sonhos</h2>
-      <p>O Jardim dos Sonhos foi inspirado pela flor mágica que concedeu os poderes de cura a Rapunzel. Com suas flores vibrantes e ambiente tranquilo, é um refúgio perfeito para relaxar e se conectar com a natureza.</p>
+      <h2>Jardim Encantado</h2>
+      <p>O Jardim Encantado foi inspirado pela flor mágica que concedeu os poderes de cura a Rapunzel. Com suas flores vibrantes e ambiente tranquilo, é um refúgio perfeito para relaxar e se conectar com a natureza.</p>
     </div>
   </div>
   <div id="modal4" class="modal">
